# Jarvis-AI-

./: .gitignore  README.md  pyproject.toml  run.sh
docs/superpowers/plans/: 2026-06-11-jarvis-2-human-copilot.md  2026-06-11-jarvis-3-agent-manager.md  2026-06-11-jarvis-fleet-command.md  2026-06-11-jarvis-voice-agent.md  2026-06-11-jarvis-voice-perfection.md
docs/superpowers/specs/: 2026-06-11-jarvis-voice-agent-design.md
jarvis/: cli.py  config.py  diag.py  digest.py  dispatch.py  events.py  fleet.py  jarvis.py  manager.py  quality.py  recorder.py  reports.py  routing.py  server.py  speak.py  transcribe.py  wake.py
tests/: test_cli.py  test_digest.py  test_dispatch.py  test_events.py  test_fleet.py  test_manager.py  test_quality.py  test_recorder.py  test_reports.py  test_routing.py  test_server.py  test_speak.py
ui/: graph.js  hud.js  index.html  style.css  ws.js
workspace/: CLAUDE.md
workspace/.claude/: settings.json
workspace/.claude/hooks/: jarvis-guard.sh
