[project]
name = "jarvis"
version = "0.1.0"
description = "Hey Jarvis voice agent for macOS"
requires-python = ">=3.11,<3.13"
dependencies = [
    "openwakeword>=0.6",
    "onnxruntime>=1.16",
    "faster-whisper>=1.0",
    "sounddevice>=0.4",
    "webrtcvad-wheels>=2.0",
    "numpy>=1.24,<2.3",
    "fastapi>=0.110",
    "uvicorn>=0.29",
    "websockets>=12",
    "edge-tts>=6.1",
]

[dependency-groups]
dev = ["pytest>=8.0", "httpx>=0.27"]

[tool.pytest.ini_options]
testpaths = ["tests"]
